--- a/index.html
+++ b/index.html
@@ -9,72 +9,14 @@
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css?family=Prompt:400,700" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="jquery.scrollTo.min.js"></script>
-	<script>
-		$(window).scroll(function() 
-		{
-		    if ($(this).scrollTop()>200) 
-			{ 
-			   
-		       $('.logo').stop().animate({'width' : '30%', 'height' : '63px'}, 200);
-			   $('#pic').stop().animate({'width' : '340px', 'height' : '53px', 'margin-top' : '10px' }, 200);
-			}
-			else
-			{
-			   $('.logo').stop().animate({'width' : '50%', 'height' : '240px'}, 200);
-			   $('#pic').stop().animate({'width' : '680px', 'height' : '106px', 'margin-top' : '134px'}, 200);
-			}
-		});
-    </script>
-	<script>
-		$(function($) 
-		{
-		    $.scrollTo(0);
-            $('.arrow').click(function() { $.scrollTo($('#oferta'), 700); });
-
-			$(window).scroll(function()
-            {
-               if($(this).scrollTop()>300) $('.scrollup').fadeIn();
-               else $('.scrollup').fadeOut();      
-            });
-        });
-		$(document).ready(function() 
-		{
-		var reg=1;
-		var lastScrollTop = 0;
-        $(window).scroll(function(event)
-		{
-            var st = $(this).scrollTop();
-            if (st > lastScrollTop)
-			{ 
-                switch(reg)
-				{
-					case 1:
-					   $.scrollTo($('#oferta'), 700);
-					   reg=2;
-					break;
-				}
-            } 
-			else
-			{   
-                switch(reg)
-			    {
-					case 2:
-					   $("html, body").animate({ scrollTop: 0 }, 700);
-					   reg=1;
-					break;
-			    }
-            }
-            lastScrollTop = st;
-        });
-        });
-    </script>
+    <script src="jquery.scrollTo.min.js"></script>
+    <script src="scripts.js" type="text/javascript"></script>
 </head>
 <body>
   <header>
       <div class="logo"><img src="img/logo.png" id="pic"></div>
 	  <div style="clear: both;"></div>
+	  <a href="#"><img id="arrowup" src="img/arrowup.png"/></a>
 	  <h1 id="kontakt">KONTAKT</h1>
 	  <div style="clear: both;"></div>
 	  <article id="contact">
@@ -97,26 +39,23 @@
 	         <h2 class="name">biuro@piotrmikolajek.pl</h2>
 		  </section>
 	  </article>
+      <a href="#"><img class="arrow" src="img/arrow.png"/></a>
   </header>
   <main>
-      <div class="down">
-          <a href="#"><img class="arrow" src="img/arrow.png"/></a>
-      </div>
+    <section class="first"> 
       <h1 id="oferta">OFERTA</h1>
-      <div id="services">
-	  <p id="hed">ŚWIADCZYMY USŁUGI W ZAKRESIE:</p>
+	  <div style="clear: both;"></div>
+	  <div id="borderdec">
       </div>
-      <article id="details2">
-	     <section class="servdeta"></section>
+	  <article id="services">
+	     <p id="hed">ŚWIADCZYMY USŁUGI W ZAKRESIE:</p>
+	     <section class="servdeta">
 	        <ul>
 		       <li>Projektowania instalacji elektrycznych wszystkich rodzaju obiektów</li>
 		       <li>Projektowania instalacji słaboprądowych</li>
 		       <li>Projektowania przyłączy elektroenergetycznych</li>
 		       <li>Projektowania sieci elektroenergetycznych nn i śn</li>
 		       <li>Projektowania elektroenergetycznych stacji transformatorowych śn/nn</li>
-		    </ul>
-	     <section class="servdeta">
-	        <ul>
 		       <li>Projektowania przebudowy sieci elektroenergetycznych nn i śn</li>
 		       <li>Projektowania oświetlenia ulicznego i terenu</li>
 		       <li>Kosztorysowania branży elektrycznej</li>
@@ -124,9 +63,28 @@
 		       <li>Nadzorów inwestorskich robót elektrycznych</li>
 		    </ul>
 	     </section>
-      </article>
+      </article>  
       <div style="clear: both;"></div>
+	  <a href="#"><img class="arrow2" src="img/arrow.png"/></a>
+	  <div style="clear: both;"></div>
+    </section>
+	<section class="second"> 
+	  <h1 id="onas">O NAS</h1>
+	  <article id="aboutdet">
+	     <h3 class="addaboutdet">Projektant specjalizujący się w sieciach elektroenergetycznych</h3>
+	     <h3 class="addaboutdet">Projektant specjalizujący się w instalacjach elektrycznych, teletechnicznych budynków przemysłowych i usługowych</h3>
+	     <h3 class="addaboutdet">Emerytowany doświadczony nauczyciel elektrotechniki, pełniący funkcję doradczą w branży elektrycznej</h3>
+	  </article>
+	  <article id="about">
+	     <h3 class="addabout">PIOTR MIKOŁAJEK</h3>
+	     <h3 class="addabout">MARCIN MIKOŁAJEK</h3>
+	     <h3 class="addabout">JÓZEF MIKOŁAJEK</h3>
+	   </article>
+	</section>
   </main>
+  <footer>
+     MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by Eryk Mikołajek
+  </footer>
 </body>
 </html>
 
