--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<h1 id="contact">Kontakt</h1>
 		<h1>Oferta</h1>
 		<h1>O nas</h1>
+		<img id="button" src="img/menu.png">
 		<!--
       
 		  <div style="clear: both;"></div>
@@ -47,12 +48,21 @@
 		-->
   </header>
   <main>
-	<img id="background" src="img/background.jpg">
-    
-	<footer>
-        <p>MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by zeze.studio</p>
-    </footer>
+	<div id = "background"></div>
+	<article id="contact">
+			 <section id="contup">
+				<h3 class="add">FIRMA ELEKTRYCZNA</h3>
+				<h3 class="add">PROJEKTOWO WYKONAWCZA</h3>
+			 </section>
+			 <section id="contdown">
+				<h3 class="add">UL. MICKIEWICZA 175</h3>
+				<h3 class="add">34-200 SUCHA BESKIDZKA</h3>
+			 </section>
+		  </article> 
   </main>
+  <footer>
+        <p>MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by zeze.studio</p>
+  </footer>
 </body>
 </html>
 
