--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 <body>
   <header>
 		<img class="logo" src="img/logo.png">
-		<h1 id="contact">Kontakt</h1>
-		<h1>Oferta</h1>
-		<h1>O nas</h1>
-		<img id="button" src="img/menu.png">
+		<nav>
+				<p class="nav-item"><a href="#">Kontakt</a></p>
+				<p class="nav-item"><a href="#">Oferta</a></p>
+				<p class="nav-item"><a href="#">O nas</a></p>
+		</nav>
+		
+		<button id="button" class="nav-btn">
+			<img src="img/menu.png">
+		</button>
 		<!--
       
 		  <div style="clear: both;"></div>
