--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="description" content="Firma Elektryczna Projektowo Wykonawcza. Świadczymy usługi w zakresie projektowania, pomiarów, nadzorów oraz kosztorysowania w branży elektrycznej." />
     <meta name="keywords" content="mikel, pomiary, elektryk, prąd, energia, piotr, mikołajek, sucha, beskidzka, projekt, nadzór, architektura, kosztorys, porada, energetyka"/>
-    <title>MIKEL</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>MIKEL</title>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet"> <!-- przycisk napis -->
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet"> <!-- nagłowki -->
