--- a/index.html
+++ b/index.html
@@ -24,47 +24,30 @@
 		<button id="button" class="nav-btn">
 			<img src="img/menu.png">
 		</button>
-		<!--
-      
-		  <div style="clear: both;"></div>
-		  <a href="#"><img id="arrowup" src="img/arrowup.png"/></a>
-		  <h1 id="kontakt">KONTAKT</h1>
-		  <div style="clear: both;"></div>
-		  <article id="contact">
-			 <section id="contup">
-				<h3 class="add">FIRMA ELEKTRYCZNA</h3>
-				<h3 class="add">PROJEKTOWO WYKONAWCZA</h3>
-			 </section>
-			 <section id="contdown">
-				<h3 class="add">UL. MICKIEWICZA 175</h3>
-				<h3 class="add">34-200 SUCHA BESKIDZKA</h3>
-			 </section>
-		  </article> 
-		  <article id="details">
-			  <section id="dettup">
-				 <h2 class="name">PIOTR</h2>
-				 <h2 class="name">MIKOŁAJEK</h2>
-			  </section>
-			  <section id="detdown">
-				 <h2 class="name">501 744 801</h2>
-				 <h2 class="name">biuro@piotrmikolajek.pl</h2>
-			  </section>
-		  </article>
-		  <a href="#"><img class="arrow" src="img/arrow.png"/></a>
-		-->
   </header>
   <main>
-	<div id = "background"></div>
-	<article id="contact">
-			 <section id="contup">
-				<h3 class="add">FIRMA ELEKTRYCZNA</h3>
-				<h3 class="add">PROJEKTOWO WYKONAWCZA</h3>
-			 </section>
-			 <section id="contdown">
-				<h3 class="add">UL. MICKIEWICZA 175</h3>
-				<h3 class="add">34-200 SUCHA BESKIDZKA</h3>
-			 </section>
-		  </article> 
+	<section class="section-main">
+		<b>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</b>
+		<p class="smallTitle">Frima elektryczna projektowo - wykonawcza.</p>
+		<button id="buttonMain">
+			ZOBACZ OFERTĘ
+		</button>
+	</section>
+	<section class="section">
+		<b>OFERTA</b>
+		<p class="smallTitle">Nasza oferta</p>
+	</section>
+	<section class="section">
+		<b>KONTAKT</b>
+		<p class="smallTitle">FIRMA ELEKTRYCZNA</br>
+			PROJEKTOWO WYKONAWCZA</br>
+			UL. MICKIEWICZA 175</br>
+			34-200 SUCHA BESKIDZKA</p>
+	</section>
+	<section class="section">
+		<b>O NAS</b>
+		<p class="smallTitle">O nas</p>
+	</section>
   </main>
   <footer>
         <p>MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by zeze.studio</p>
