--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <header>
 		<img class="logo" src="img/logo.png">
 		<nav>
-				<p class="nav-item"><a href="#">Kontakt</a></p>
-				<p class="nav-item"><a href="#">Oferta</a></p>
-				<p class="nav-item"><a href="#">O nas</a></p>
+				<p class="nav-item"><a href="#section-contact">Kontakt</a></p>
+				<p class="nav-item"><a href="#section-offer">Oferta</a></p>
+				<p class="nav-item"><a href="#section-about">O nas</a></p>
 		</nav>
 		
 		<button id="button" class="nav-btn">
@@ -27,26 +27,26 @@
   </header>
   <main>
 	<section class="section-main">
-		<b>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</b>
-		<p class="smallTitle">Frima elektryczna projektowo - wykonawcza.</p>
+		<h1>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</h1>
+		<h2>Frima elektryczna projektowo - wykonawcza.</h2>
 		<button id="buttonMain">
-			ZOBACZ OFERTĘ
+			KONTAKT
 		</button>
 	</section>
-	<section class="section">
-		<b>OFERTA</b>
-		<p class="smallTitle">Nasza oferta</p>
-	</section>
-	<section class="section">
-		<b>KONTAKT</b>
-		<p class="smallTitle">FIRMA ELEKTRYCZNA</br>
+	<section class="section" id="section-contact">
+		<h1>KONTAKT</h1>
+		<h2>FIRMA ELEKTRYCZNA</br>
 			PROJEKTOWO WYKONAWCZA</br>
 			UL. MICKIEWICZA 175</br>
-			34-200 SUCHA BESKIDZKA</p>
+			34-200 SUCHA BESKIDZKA</h2>
 	</section>
-	<section class="section">
-		<b>O NAS</b>
-		<p class="smallTitle">O nas</p>
+	<section class="section" id="section-offer">
+		<h1>OFERTA</h1>
+		<h2>Nasza oferta</h2>
+	</section>
+	<section class="section" id="section-about">
+		<h1>O NAS</h1>
+		<h2>O nas</h2>
 	</section>
   </main>
   <footer>
