--- a/index.html
+++ b/index.html
@@ -16,55 +16,37 @@
   <header>
 		<img class="logo" src="img/logo.png">
 		<nav>
-				<p class="nav-item"><a href="#">Kontakt</a></p>
-				<p class="nav-item"><a href="#">Oferta</a></p>
-				<p class="nav-item"><a href="#">O nas</a></p>
+				<p class="nav-item"><a href="#section-contact">Kontakt</a></p>
+				<p class="nav-item"><a href="#section-offer">Oferta</a></p>
+				<p class="nav-item"><a href="#section-about">O nas</a></p>
 		</nav>
 		
 		<button id="button" class="nav-btn">
 			<img src="img/menu.png">
 		</button>
-		<!--
-      
-		  <div style="clear: both;"></div>
-		  <a href="#"><img id="arrowup" src="img/arrowup.png"/></a>
-		  <h1 id="kontakt">KONTAKT</h1>
-		  <div style="clear: both;"></div>
-		  <article id="contact">
-			 <section id="contup">
-				<h3 class="add">FIRMA ELEKTRYCZNA</h3>
-				<h3 class="add">PROJEKTOWO WYKONAWCZA</h3>
-			 </section>
-			 <section id="contdown">
-				<h3 class="add">UL. MICKIEWICZA 175</h3>
-				<h3 class="add">34-200 SUCHA BESKIDZKA</h3>
-			 </section>
-		  </article> 
-		  <article id="details">
-			  <section id="dettup">
-				 <h2 class="name">PIOTR</h2>
-				 <h2 class="name">MIKOŁAJEK</h2>
-			  </section>
-			  <section id="detdown">
-				 <h2 class="name">501 744 801</h2>
-				 <h2 class="name">biuro@piotrmikolajek.pl</h2>
-			  </section>
-		  </article>
-		  <a href="#"><img class="arrow" src="img/arrow.png"/></a>
-		-->
   </header>
-  <main>
-	<div id = "background"></div>
-	<article id="contact">
-			 <section id="contup">
-				<h3 class="add">FIRMA ELEKTRYCZNA</h3>
-				<h3 class="add">PROJEKTOWO WYKONAWCZA</h3>
-			 </section>
-			 <section id="contdown">
-				<h3 class="add">UL. MICKIEWICZA 175</h3>
-				<h3 class="add">34-200 SUCHA BESKIDZKA</h3>
-			 </section>
-		  </article> 
+  <main class="section-main">
+		<h1>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</h1>
+		<h2>Firma elektryczna projektowo - wykonawcza.</h2>
+		<button id="buttonMain">
+			KONTAKT
+		</button>
+	</main>
+	<section class="section" id="section-contact">
+		<h1>KONTAKT</h1>
+		<h2>FIRMA ELEKTRYCZNA</br>
+			PROJEKTOWO WYKONAWCZA</br>
+			UL. MICKIEWICZA 175</br>
+			34-200 SUCHA BESKIDZKA</h2>
+	</section>
+	<section class="section" id="section-offer">
+		<h1>OFERTA</h1>
+		<h2>Nasza oferta</h2>
+	</section>
+	<section class="section" id="section-about">
+		<h1>O NAS</h1>
+		<h2>O nas</h2>
+	</section>
   </main>
   <footer>
         <p>MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by zeze.studio</p>
