--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 			<img src="img/menu.png">
 		</button>
   </header>
-  <main>
-	<section class="section-main">
+  <main class="section-main">
 		<h1>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</h1>
-		<h2>Frima elektryczna projektowo - wykonawcza.</h2>
+		<h2>Firma elektryczna projektowo - wykonawcza.</h2>
 		<button id="buttonMain">
 			KONTAKT
 		</button>
-	</section>
+	</main>
 	<section class="section" id="section-contact">
 		<h1>KONTAKT</h1>
 		<h2>FIRMA ELEKTRYCZNA</br>
