--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="mikel, pomiary, elektryk, prąd, energia, piotr, mikołajek, sucha, beskidzka, projekt, nadzór, architektura, kosztorys, porada, energetyka"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MIKEL</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	</script><script src="app.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet"> <!-- przycisk napis -->
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet"> <!-- nagłowki -->
@@ -14,18 +16,24 @@
 </head>
 <body>
   <header>
-		<img class="logo" src="img/logo.png">
+		<img class="logo" src="assets/logo.png">
 		<nav>
-				<p class="nav-item"><a href="#section-contact">Kontakt</a></p>
-				<p class="nav-item"><a href="#section-offer">Oferta</a></p>
-				<p class="nav-item"><a href="#section-about">O nas</a></p>
+				<p class="nav-item" id="nav-item-contact"><a href="#">Kontakt</a></p>
+				<p class="nav-item" id="nav-item-offer"><a href="#">Oferta</a></p>
+				<p class="nav-item" id="nav-item-about"><a href="#">O nas</a></p>
 		</nav>
 		
-		<button id="button" class="nav-btn">
-			<img src="img/menu.png">
+		<button id="button" class="nav-btn" onclick="openNav()">
+			<img src="assets/menu.png">
 		</button>
   </header>
   <main class="section-main">
+	  <div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a id="sidenav-contact" href="#">Kontakt</a>
+		<a id="sidenav-offer" href="#">Oferta</a>
+		<a id="sidenav-about" href="#">O nas</a>
+	  </div>
 		<h1>ROZWIĄZANIA Z BRANŻY ELEKTRYCZNEJ DLA CIEBIE I TWOJEJ FIRMY.</h1>
 		<h2>Firma elektryczna projektowo - wykonawcza.</h2>
 		<button id="buttonMain">
@@ -34,22 +42,43 @@
 	</main>
 	<section class="section" id="section-contact">
 		<h1>KONTAKT</h1>
-		<h2>FIRMA ELEKTRYCZNA</br>
-			PROJEKTOWO WYKONAWCZA</br>
-			UL. MICKIEWICZA 175</br>
-			34-200 SUCHA BESKIDZKA</h2>
+		<h2>Firma Elektryczna Projektowo Wykonawcza</h2>
+		</br></br></br>
+		<h2>ADRES: ul. Mickiewicza 175, 34-200 Sucha Beskidzka</h2>
+		<h2>TELEFON: 501 744 801</h2>
+		<h2>E-MAIL: biuro@piotrmikolajek.pl</h2>
+		</br></br>
+		<h2>Biuro mieści się w Suchej Beskidzkiej przy ul. Mickiewicza 175, II piętro lokal 4.</h2>
+		<h2>Czynne od: 6:00 do 15:00</h2>
 	</section>
 	<section class="section" id="section-offer">
 		<h1>OFERTA</h1>
-		<h2>Nasza oferta</h2>
+		<h2>Świadczymy usługi w zakresie:</h2>
+		<ul>
+			<li>projektowania instalacji elektrycznych wszystkich rodzaju obiektów</li>
+			<li>projektowania instalacji słaboprądowych</li>
+			<li>projektowania przyłączy elektroenergetycznych</li>
+			<li>projektowania sieci elektroenergetycznych nn i ?n</li>
+			<li>projektowania elektroenergetycznych stacji transformatorowych ?n/nn</li>
+			<li>projektowania przebudowy sieci elektroenergetycznych nn i ?n</li>
+			<li>projektowania oświetlenia ulicznego i terenu</li>
+			<li>kosztorysowania branży elektrycznej</li>
+			<li>pomiarów instalacji elektrycznych</li>
+			<li>nadzorów inwestorskich robót elektrycznych</li>
+		</ul>
 	</section>
 	<section class="section" id="section-about">
 		<h1>O NAS</h1>
-		<h2>O nas</h2>
+		<h2>Firma powstała w 2005 roku, jest firmą rodzinną składającą się z projektantów:</h2>
+		<ul>
+			<li><b>inż. elektryk Piotr Mikołajek</b> projektant specjalizujący się w sieciach elektroenergetycznych</li>
+			<li><b>mgr inż. elektryk Marcin Mikołajek</b> projektant specjalizujący się w instalacjach elektrycznych, teletechnicznych budynków przemysłowych i usługowych</li>
+			<li><b>mgr elektryk Józef Mikołajek</b> emerytowany doświadczony nauczyciel elektrotechniki, pełniący funkcje doradcze w branży elektrycznej</li>
+		</ul>
 	</section>
-  </main>
   <footer>
-        <p>MIKEL - projekty i pomiary elektryczne | Wszytstkie prawa zastrzeżone &copy; | Designed by zeze.studio</p>
+        <p>MIKEL - projekty i pomiary elektryczne | 501 744 801</p>
+		<p id="made-by">Stworzone przez zeze.studio</p>
   </footer>
 </body>
 </html>
