--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 			<li>projektowania instalacji elektrycznych wszystkich rodzaju obiektów</li>
 			<li>projektowania instalacji słaboprądowych</li>
 			<li>projektowania przyłączy elektroenergetycznych</li>
-			<li>projektowania sieci elektroenergetycznych nn i ?n</li>
-			<li>projektowania elektroenergetycznych stacji transformatorowych ?n/nn</li>
-			<li>projektowania przebudowy sieci elektroenergetycznych nn i ?n</li>
+			<li>projektowania sieci elektroenergetycznych nn i sn</li>
+			<li>projektowania elektroenergetycznych stacji transformatorowych sn/nn</li>
+			<li>projektowania przebudowy sieci elektroenergetycznych nn i sn</li>
 			<li>projektowania oświetlenia ulicznego i terenu</li>
 			<li>kosztorysowania branży elektrycznej</li>
 			<li>pomiarów instalacji elektrycznych</li>
