--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="description" content="Firma Elektryczna Projektowo Wykonawcza. Świadczymy usługi w zakresie projektowania, pomiarów, nadzorów oraz kosztorysowania w branży elektrycznej." />
     <meta name="keywords" content="mikel, pomiary, elektryk, prąd, energia, piotr, mikołajek, sucha, beskidzka, projekt, nadzór, architektura, kosztorys, porada, energetyka"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MIKEL</title>
+	<title>Mikel - firma elektryczna projektowo - wykonawcza</title>
+	<link rel="icon" href="assets/icon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</script><script src="app.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
@@ -45,8 +46,8 @@
 		<h2>Firma Elektryczna Projektowo Wykonawcza</h2>
 		</br></br></br>
 		<h2>ADRES: ul. Mickiewicza 175, 34-200 Sucha Beskidzka</h2>
-		<h2>TELEFON: 501 744 801</h2>
-		<h2>E-MAIL: biuro@piotrmikolajek.pl</h2>
+		<h2>TELEFON: <a href="tel:501744801">501 744 801</a></h2>
+		<h2>E-MAIL: <a href="mailto:biuro@piotrmikolajek.pl">biuro@piotrmikolajek.pl</a></h2>
 		</br></br>
 		<h2>Biuro mieści się w Suchej Beskidzkiej przy ul. Mickiewicza 175, II piętro lokal 4.</h2>
 		<h2>Czynne od: 6:00 do 15:00</h2>
@@ -58,9 +59,9 @@
 			<li>projektowania instalacji elektrycznych wszystkich rodzaju obiektów</li>
 			<li>projektowania instalacji słaboprądowych</li>
 			<li>projektowania przyłączy elektroenergetycznych</li>
-			<li>projektowania sieci elektroenergetycznych nn i ?n</li>
-			<li>projektowania elektroenergetycznych stacji transformatorowych ?n/nn</li>
-			<li>projektowania przebudowy sieci elektroenergetycznych nn i ?n</li>
+			<li>projektowania sieci elektroenergetycznych nn i sn</li>
+			<li>projektowania elektroenergetycznych stacji transformatorowych sn/nn</li>
+			<li>projektowania przebudowy sieci elektroenergetycznych nn i sn</li>
 			<li>projektowania oświetlenia ulicznego i terenu</li>
 			<li>kosztorysowania branży elektrycznej</li>
 			<li>pomiarów instalacji elektrycznych</li>
