--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 	<section class="section" id="section-contact">
 		<h1>KONTAKT</h1>
 		<h2>Firma Elektryczna Projektowo Wykonawcza</h2>
-		<h2 id="space-above">ADRES: ul. Mickiewicza 175, 34-200 Sucha Beskidzka</h2>
+		<h2 id="space-above">ADRES: 34-200 Sucha Beskidzk, ul. Mickiewicza 175, II piętro lokal 4</h2>
 		<h2>TELEFON: <a href="tel:501744801">501 744 801</a></h2>
 		<h2>E-MAIL: <a href="mailto:biuro@piotrmikolajek.pl">biuro@piotrmikolajek.pl</a></h2>
-		<h2 id="space-above2">Biuro mieści się w Suchej Beskidzkiej przy ul. Mickiewicza 175, II piętro lokal 4.</h2>
-		<h2>Czynne od: 6:00 do 15:00</h2>
+		<h2 id="space-above2">Biuro czynne od: 6:00 do 15:00</h2>
 	</section>
 	<section class="section" id="section-offer">
 		<h1>OFERTA</h1>
